--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
 
 after_success:
   - mkdir -p dist
-  - go build -v ./rice -o dist/rice
+  - go build -v -o dist/rice ./rice
 
 deploy:
   provider: releases
